--- a/app/src/main/res/layout/activity_client_verification_3.xml
+++ b/app/src/main/res/layout/activity_client_verification_3.xml
@@ -116,7 +116,7 @@
         android:tint="#0ca795"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        app:srcCompat="@drawable/right_arrow"
+        app:srcCompat="@drawable/right_arrow_drawable"
         android:background="@drawable/client_verification_button"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
