--- a/app/src/main/res/layout/activity_client_verification_2.xml
+++ b/app/src/main/res/layout/activity_client_verification_2.xml
@@ -28,9 +28,10 @@
         android:layout_below="@+id/textView7"
         android:paddingRight="13dp"
         android:paddingTop="5dp"
+        android:layout_marginBottom="10dp"
         android:text="@string/clientVerify2"
         android:textColor="@android:color/white"
-        android:textSize="20sp" />
+        android:textSize="15sp" />
 
     <ImageButton
         android:id="@+id/imageButton2"
@@ -46,13 +47,13 @@
         />
 
     <ImageButton
-        android:id="@+id/imageButton"
+        android:id="@+id/ContinueButton"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:tint="#0ca795"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        app:srcCompat="@drawable/right_arrow"
+        app:srcCompat="@drawable/right_arrow_drawable"
         android:background="@drawable/client_verification_button"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
