--- a/app/src/main/res/menu/activity_main3_drawer.xml
+++ b/app/src/main/res/menu/activity_main3_drawer.xml
@@ -19,6 +19,10 @@
             android:icon="@drawable/contact"
             android:title="Directory" />
         <item
+            android:id="@+id/clientverify"
+            android:icon="@drawable/client_verify_shield"
+            android:title="Verify Your Account" />
+        <item
             android:id="@+id/settings"
             android:icon="@drawable/settings"
             android:title="Settings" />
