--- a/app/src/main/res/layout/activity_client__verification_1.xml
+++ b/app/src/main/res/layout/activity_client__verification_1.xml
@@ -86,7 +86,7 @@
     </ImageView>
 
     <ImageButton
-        android:id="@+id/imageButton2"
+        android:id="@+id/cross"
         android:layout_width="20dp"
         android:layout_height="20dp"
         android:layout_alignParentStart="true"
