--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -141,7 +141,7 @@
         <item name="android:background">@drawable/b3</item>
     </style>
 
-    <style name="day" parent="Theme.AppCompat.DayNight.DarkActionBar">
+    <style name="day" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="dayNnightBg">@drawable/b2</item>
         <item name="dayNnightCard">#FFFFFF</item>
         <item name="dayNnightText">#000000</item>
@@ -149,7 +149,7 @@
         <item name="dayNnightBtn">#004E92</item>
         <item name="android:windowAnimationStyle">@style/WindowAnimationTransition</item>
     </style>
-    <style name="night" parent="Theme.AppCompat.DayNight.DarkActionBar">
+    <style name="night" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="dayNnightBg">@drawable/bg_gradient</item>
         <item name="dayNnightCard">#000000</item>
         <item name="dayNnightText">#FFFFFF</item>
