--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -2,48 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@mipmap/blur"
+    android:background="@drawable/bg_gradient"
     android:orientation="vertical">
-
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar2"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="#212121">
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <ImageButton
-                android:id="@+id/profile_back2"
-                android:layout_width="25dp"
-                android:layout_height="?attr/actionBarSize"
-                android:paddingTop="15dp"
-                android:paddingBottom="15dp"
-                android:src="@drawable/back"
-                android:scaleType="centerCrop"
-                android:tint="#ffffff"
-                android:background="#00000000"
-                android:onClick="goBacktoPrevious"
-                android:layout_alignParentLeft="true"/>
-
-            <TextView
-                android:layout_marginLeft="15dp"
-                android:layout_marginTop="15dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_toRightOf="@id/profile_back2"
-                android:text="About Us"
-                android:textSize="20dp"
-                android:gravity="center_vertical"/>
-
-
-
-
-        </RelativeLayout>
-
-    </android.support.v7.widget.Toolbar>
 
 
     <TextView
