--- a/app/src/main/res/layout/activity_privacy_policy.xml
+++ b/app/src/main/res/layout/activity_privacy_policy.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     tools:context="com.twenty.four.crafts.PrivacyPolicy"
-    android:background="@mipmap/blur">
+    android:background="@drawable/bg_gradient">
 
     <TextView
         android:id="@+id/privacy"
