--- a/app/src/main/res/layout/activity_auditions_main.xml
+++ b/app/src/main/res/layout/activity_auditions_main.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    android:orientation="vertical"
+<android.support.v4.widget.SwipeRefreshLayout
+    android:id="@+id/swipe_container"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -35,4 +35,4 @@
         android:layout_marginRight="20dp"
         android:src="@drawable/ic_action_plus"/>
 
-</RelativeLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
