--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -26,6 +26,7 @@
                 android:layout_width="25dp"
                 android:layout_height="?attr/actionBarSize"
                 android:paddingTop="15dp"
+                android:layout_marginLeft="15dp"
                 android:paddingBottom="15dp"
                 android:src="@drawable/back"
                 android:scaleType="centerCrop"
@@ -35,6 +36,7 @@
                 android:layout_alignParentLeft="true"/>
 
             <TextView
+                android:textColor="@color/Color_White"
                 android:layout_marginLeft="15dp"
                 android:layout_marginTop="15dp"
                 android:layout_width="match_parent"
