--- a/app/src/main/res/layout/newsfeed_fragment.xml
+++ b/app/src/main/res/layout/newsfeed_fragment.xml
@@ -103,7 +103,7 @@
                 android:layout_margin="5dp"
                 android:background="@drawable/button_box"
                 android:padding="5dp"
-                android:text="Dinakaran (Tamil)"
+                android:text="Vikatan"
                 android:textAlignment="center"
                 android:textAllCaps="false"
                 android:textColor="#000000"
